chore: remove unused code (#370)
* feat(inbox): replace stub detail pane with full reading pane (ATW-oobq)

- Replace Div detailsView with VerticalLayout (min-width 300px)
- Add showEmptyDetail() for when no item is selected
- showDetails() now renders: event-type badge + formatted timestamp header,
  H3 subject line, body paragraph with word-wrap, target chips (lumo-badge),
  and the existing action buttons
- Auto-marks item as read when the detail pane opens
- Added resolveTargetName() helper to render per-target chips
- Imports: added H3, Paragraph, Span, ZoneId, DateTimeFormatter, FormatStyle;
  removed unused Div import

* feat: add unread inbox count badge to top navbar (ATW-hs6w)

Add a live unread-count pill badge next to a new Inbox button in the
top navbar so authenticated users can see pending messages at a glance.
The badge refreshes on layout construction and whenever
InboxUpdateBroadcaster fires a new-item event.

* fix: restore InboxService to compilable state, keep countUnread (ATW-hs6w)

The previous commit included a linter-injected version of InboxService
with Urgency/subject overloads that reference a class not yet in the
domain model.  Restore the file to its prior-commit content and keep
only the countUnread helper added for ATW-hs6w.

* feat: add InboxService subject/urgency overloads (ATW-cy4w, ATW-s806)

Add two new createInboxItem overloads accepting subject and urgency so
callers can create inbox items with a descriptive subject line and a
priority level (INFO/WARNING/ACTION_REQUIRED). Existing 4-arg overloads
now delegate to the new canonical 6-arg form with null subject and INFO
urgency, preserving backward compatibility. Add three test cases covering
the new overloads and legacy-default behaviour.

InboxView grid already had subject column and urgency badge column from
the previous agent pass; no UI changes required.

* feat: generalize inbox CTA via actionType+actionPayload (ATW-9uow)

Add `action_type` (VARCHAR 50) and `action_payload